Moved examples into code comments

--- a/samples/control_appbar_declarative.html
+++ b/samples/control_appbar_declarative.html
@@ -11,7 +11,7 @@
         <script src="../lib/winjs-4.4.0/js/base.js"></script>
         <script src="../lib/winjs-4.4.0/js/ui.js"></script>
         
-        <script src="../aglw.js"></script>
+        <script src="../w.JS"></script>
         
         <script src="control_appbar_declarative.js"></script>
     </head>
